--- a/configs/config_qwen3vl32_fp16.yaml
+++ b/configs/config_qwen3vl32_fp16.yaml
@@ -1,14 +1,5 @@
 # ==============================================================================
-# NOTE: V100 建议使用 FP16；本配置切到 Qwen3-VL-32B-Instruct
-# 多模态 Reversal Curse 实验配置文件
-# ==============================================================================
-# 
-# 用途：控制数据生成、训练和评估的参数
-# 
-# 训练命令：
-#   普通训练：deepspeed --num_gpus=8 scripts/train.py --config configs/config.yaml --task forward
-#   混合训练：deepspeed --num_gpus=8 scripts/train_mixed.py --config configs/config.yaml --task forward --retention_ratio 0.3
-#
+# Qwen3-VL-32B QLoRA训练配置 (V100 32GB 8卡数据并行 - 优化版)
 # ==============================================================================
 
 experiment:
@@ -19,8 +10,8 @@ model:
   name_or_path: "/work/models/qwen/Qwen3-VL-32B-Instruct"
 
 lora:
-  r: 16
-  alpha: 32
+  r: 8                            # Rank 4！节省约0.5GB
+  alpha: 16                        # Alpha = 2 * r
   dropout: 0.05
   target_modules:
     - "q_proj"
@@ -29,25 +20,31 @@ lora:
     - "o_proj"
 
 data:
-  # 数据目录（generate_data.py 输出位置）
   output_dir: "data/current_dataset"
 
 training:
-  # === Learning Rate Configuration ===
-  learning_rate: 2e-4            # 初始 LR
-  min_lr: 6e-5                   # 最小 LR，低于此值停止训练
-  lr_reduction_factor: 0.5       # LR 衰减因子 (减半)
-  lr_patience: 1                 # LR 衰减的 patience
-  improvement_threshold: 0.05    # val_loss 改善阈值 (5%相对改善)
-  min_val_loss: 0.01             # val_loss 低于此值停止训练
+  # === Learning Rate ===
+  learning_rate: 5e-4             # rank变小，lr要稍微提高
+  min_lr: 2e-5
+  lr_reduction_factor: 0.5
+  lr_patience: 1
+  improvement_threshold: 0.05
+  min_val_loss: 0.2
   
   # === Batch Configuration ===
-  batch_size: 4
-  gradient_accumulation_steps: 4  # 有效 batch = 4 * 4 = 16
-  num_epochs: 20
-  max_length: 512
-  warmup_ratio: 0.05
+  batch_size: 1
+  gradient_accumulation_steps: 1
+  num_epochs: 5
+  max_length: 256                  # 短序列
+  warmup_ratio: 0.02
   weight_decay: 0.01
   
-  # 模型输出目录
+  # === 图像分辨率 ===
+  max_pixels: 200704               # 448×448
+  min_pixels: 65536                # 256×256
+  
+  # === 8-bit优化器（节省约2GB）===
+  use_8bit_optimizer: true
+  
+  # === 输出目录 ===
   output_dir: "outputs"
